// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchBar /> renders SearchBar properly 1`] = `
<form
  class="fr-search-bar"
  data-testid="search-bar"
  role="search"
>
  <label
    class="fr-label"
    for="xxxxxxx"
  >
    SearchBar du gouvernement
  </label>
  <input
    class="fr-input"
    data-testid="search-input"
    id="xxxxxxx"
    placeholder=""
    type="search"
    value=""
  />
  <button
    class="fr-btn"
    title="Rechercher"
    type="submit"
  >
    Rechercher
  </button>
</form>
`;

exports[`<SearchBar /> renders large SearchBar properly 1`] = `
<form
  class="fr-search-bar fr-search-bar--lg"
  data-testid="search-bar"
  role="search"
>
  <label
    class="fr-label"
    for="xxxxxxx"
  >
    SearchBar du gouvernement
  </label>
  <input
    class="fr-input"
    data-testid="search-input"
    id="xxxxxxx"
    placeholder=""
    type="search"
    value=""
  />
  <button
    class="fr-btn fr-btn--lg"
    title="Rechercher"
    type="submit"
  >
    Rechercher
  </button>
</form>
`;
